# family-photo

./: .gitignore  Cargo.toml  README.md  biome.json  next.config.ts  open-next.config.ts  package.json  pnpm-lock.yaml  turbo.json  wrangler.jsonc
.claude/: settings.json
.claude/agents/: review-guideline.md  review-performance.md  review-quality.md
.claude/commands/: pr.md
.claude/rules/: coding.md  front.md  workers.md
.claude/skills/branch-name/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.github/: dependabot.yml
.github/actions/setup-pnpm/: action.yml
.github/workflows/: ci.yml  deploy-cdn-prod.yml  deploy-cdn.yml  deploy-media-processor.yml  deploy-prod.yml  deploy-storage-proxy.yml
docs/: DESIGN.md
src/: auth.ts
src/app/: layout.tsx  page.tsx  schemas.ts
src/app/api/medias/: route.ts
src/app/forbidden/: page.tsx
src/app/upload/: page.tsx
src/components/: Gallery.tsx  GoogleSigninButton.tsx  Header.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx
src/lib/: env.ts  s3.ts
